# schema-drift

./: .gitignore  BACKENDS.md  CHANGELOG.md  CONTRIBUTING.md  INTEGRATIONS.md  LICENSE  QUICKSTART.md  README.md  WEB-UI.md  pyproject.toml  test.db  test.py
.github/workflows/: ci.yml  schema-drift.yml
examples/: basic.py  export.py  slack.py  watch.py
schema_drift/: EXPORT.md  WATCH.md  __init__.py  api.py  ci.py  cli.py  core.py  diff.py  export.py  openapi.py  watch.py
schema_drift/backends/: __init__.py  base.py  mariadb.py  mysql.py  openapi.py  oracle.py  postgres.py  sqlite.py
schema_drift/integrations/: __init__.py  alembic.py  django.py  slack.py  team.py  webhook.py
schema_drift/web/: __init__.py
tests/: test_api.py  test_ci.py  test_cli.py  test_core.py  test_integrations.py  test_mariadb.py  test_mysql.py  test_openapi.py  test_oracle.py  test_watch.py
