[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "schema-drift"
version = "0.1.0"
description = "Track why your schema changed, not just what changed."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["database", "schema", "migrations", "diff", "postgres", "sqlite"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
dev = ["pytest", "pytest-cov", "ruff"]

[project.urls]
Homepage = "https://github.com/yourname/schema-drift"
Repository = "https://github.com/yourname/schema-drift"

[tool.ruff]
line-length = 100
